--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,12 @@
   text-align: center;
   list-style-type: none !important;
 }
-a{
+
+a {
   text-decoration: none !important;
 }
 
-.margin{
+.margin {
   margin-top: 17px;
 }
 
@@ -36,10 +37,40 @@ a{
   color: #61dafb;
 }
 
+.skeleton {
+  position: relative;
+  overflow: hidden;
+  background: #e0e0e0;
+}
+
+.skeleton::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
+  animation: shimmer 1.5s infinite;
+}
+
+@keyframes shimmer {
+  0% {
+    left: -100%;
+  }
+
+  100% {
+    left: 100%;
+  }
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -47,19 +78,19 @@ a{
 
 
 
-.menu{
+.menu {
   width: 380px;
 }
 
 @media (max-width: 768px) {
   .mt {
-    margin-top: 30px; 
+    margin-top: 30px;
   }
 }
 
 @media (max-width: 425px) {
   .custom-margin-top {
-    margin-top: 30px; 
+    margin-top: 30px;
   }
 }
 
